[project]
name = "rag-system"
description = "My RAG Project"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "streamlit>=1.40.0",
]